k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: lag
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: lag
  type: ClusterIP
