k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lag
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: lag.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lag
              servicePort: http
  tls:
    - hosts:
        - lag.example.com
      secretName: my-tls-secret
